# todophase2

todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/: README.md  speckit.plan  speckit.tasks
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/backend/: pyproject.toml  requirements.txt
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/backend/src/: auth.py  database.py  dependencies.py  main.py  models.py
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/backend/src/routers/: tasks.py
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/frontend/: package-lock.json  package.json  tailwind.config.ts
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/frontend/src/app/: globals.css  layout.tsx  page.tsx
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/frontend/src/components/auth/: withAuth.tsx
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/frontend/src/components/ui/: card.tsx
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/frontend/src/contexts/: AuthContext.tsx
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/frontend/src/lib/: api.ts
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/history/prompts/Phase 1 In-Memory Console App/: 1-create-spec-for-in-memory-console-app.spec.prompt.md
todo_phase2/Full-Stack-Web-Application-hackathon2-phase2/history/prompts/in-memory-console-app/: 0001-phase-1-in-memory-console-app-requirements.spec.prompt.md  1-create-phase-1-in-memory-console-app-requirements.spec.prompt.md
(+3 files in other folders)
